--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,11 @@ body {
     border-radius: 0% 20% 0% 20%;
     background: linear-gradient(to bottom, var(--sun), var(--cyan));
     font-size: 2rem;
-    min-height: 50vh;
+    min-height: 20vh; /* 50vh */
     min-width: 350px;
-    max-width: 700px;
+    max-width: 400px; /* 700px */
     box-shadow: 0px 20px 30px var(--darker);
+    opacity: 0.8;
 }
 
 #search-box {
