--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 body {
     background-image: url("./image.jpg");
     background-size: cover;
-    background-position: top center;
+    background-position: bottom center;
 }
 
 .app-wrap {
